Users component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
 <div class="container bg-success">
-  <h1>{{title}}</h1>
+  <h1>{{ title }}</h1>
   <h2>Hola</h2>
   <p>Mi primera app con Angular</p>
 </div>
 
-<div class="container">
-  <div class="card" *ngFor="let item of characters">
-    <h2>{{item.name}}</h2>
-  </div>
-</div>
+
+<app-hello-world></app-hello-world>
+<app-users></app-users>
