--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  background: rgb(27, 1, 1);
+  color: aliceblue;
+}
+
+p {
+
+}
